--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,61 @@
 .myphoto {
-    width: 200px;
-    border-radius: 5px;
-    object-fit: cover;
-  }
+  width: 200px;
+  border-radius: 5px;
+  object-fit: cover;
+}
 
-  .username {
-    font-weight: bold;
-  }
+h1 {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+    sans-serif;
+}
 
-  .bio {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 15px;
-    width: 292.64px;
-  }
-  .biography {
-    display: inline-block;
-    
-  }
-  .introduction {
-    display: inline-block;
-  }
+.bio {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+    sans-serif;
+  font-size: 15px;
+  width: 292.64px;
+}
 
-  .replit-button {
-    width: 500px;
-    height: 100px;
-    background-color:rgb(198, 250, 222);
-    border-radius: 10px;
-    border-width: 1px;
-  }
+.introduction {
+  display: inline-block;
+}
+
+.first-div-button {
+  width: 500px;
+  height: 100px;
+  background-color: rgb(198, 250, 222);
+  border-radius: 50px;
+  border-width: 0.5px;
+  border-color: rgb(45, 177, 106);
+  transition: opacity 0.1s;
+  transition: box-shadow 0.1s;
+  font-size: 20px;
+  font-family: "Courier New", Courier, monospace;
+  margin: 0 15px;
+}
+
+.first-div-button:hover {
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
+  transition: background-color 0.06s;
+}
+
+.first-div-button:active {
+  background-color: rgb(2, 250, 118);
+}
+
+.replit-div {
+  display: inline-block;
+}
+
+.test-button {
+  width: 500px;
+  height: 100px;
+  background-color: rgb(198, 250, 222);
+  border-radius: 50px;
+  border-width: 0.5px;
+  border-color: rgb(45, 177, 106);
+  transition: opacity 0.1s;
+  transition: box-shadow 0.1s;
+  font-size: 20px;
+  font-family: "Courier New", Courier, monospace;
+}
