--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,27 @@
-body {
-  background-image: linear-gradient(0deg, rgb(0, 36, 19),rgb(0, 116, 52));
+div.home-page{
+  max-width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
 }
+
+div.introduction{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .myphoto {
   width: 200px;
   border-radius: 5px;
-  object-fit: cover;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 h1 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
     sans-serif;
-  color:rgb(219, 255, 237);
+  color:rgb(22, 185, 104);
 }
 
 .bio {
@@ -18,51 +29,31 @@ h1 {
     sans-serif;
   font-size: 15px;
   width: 292.64px;
-  color:rgb(221, 253, 237);
+  color:rgb(22, 185, 104);
+  margin-top: 20px;
+  display: block;
 }
 
 .introduction {
   display: inline-block;
 }
 
-.first-div-button {
-  height: 100px;
-  width: 500px;
-  background-color: rgb(198, 250, 222);
-  border-radius: 50px;
-  border-width: 0.5px;
-  border-color: rgb(45, 177, 106);
-  transition: opacity 0.1s;
-  transition: box-shadow 0.1s;
-  font-size: 20px;
-  font-family: "Courier New", Courier, monospace;
-  margin: 0 15px;
+#main-menu {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  list-style-position: inside;
+  display: flex;
 }
 
-.first-div-button:hover {
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
-  transition: background-color 0.06s;
-  background-color:rgb(245, 255, 250);
-  cursor: pointer;
+#main-menu1 {
+  padding: 10px;
 }
 
-.first-div-button:active {
-  background-color: rgb(2, 250, 118);
+#main-menu2 {
+  padding: 10px;
 }
 
-.replit-div {
-  display: inline-block;
-}
-
-.insta-div {
-  display: inline-block;
-}
-
-.github-div {
-  display: inline-block;
-}
-
-.test-div {
-  height: 400px;
-
+#main-menu3 {
+  padding: 10px;
 }
