--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,24 @@
+html {
+  overflow-y:scroll;
+}
+body {
+  background-color: #E8E8E8;
+  margin: 0px;
+  padding: 0px;
+  font-family:'open Sans', Arial;
+  font-size: 12px;
+}
+
+  /* Font face */
+@font-face { 
+    font-family: 'icomoon';
+    src: url('../fonts/icomoon/icomoon.eot');
+    src: url('../fonts/icomoon/icomoon.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/icomoon/icomoon.svg#icomoon') format('svg'),
+         url('../fonts/icomoon/icomoon.woff') format('woff'),
+         url('../fonts/icomoon/icomoon.ttf') format('truetype');
+}	       
+
 div.home-page{
   max-width: fit-content;
   margin-left: auto;
@@ -36,6 +57,38 @@ h1 {
 
 .introduction {
   display: inline-block;
+}
+
+.socialicons {
+  float:right;
+  margin-top:18px;
+}
+.socialicons li {
+  float:left;
+  display:inline;
+  margin:0;
+  padding:0;
+  margin-right:2px;
+}
+.socialicons li a  {
+  font-family: 'icomoon';
+  font-size: 16px;
+  display: block;
+  padding: 6px 8px;
+  background-color:#222;
+  color: #FFF;
+}
+.socialicons li a:hover  {
+  color:/*mainColor*/#fdc750;
+}
+.social-icons li:last-child {
+  margin-right:0
+}
+.socialicons .socials-text {
+  padding:9px;
+  height:10px;
+  background-color:#222;
+  color:#FFF;
 }
 
 #main-menu {
