--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,8 @@ body {
   margin: 0px;
   padding: 0px;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 12px;
+  font-size: 16px;
 }
-
   /* Font face */
 @font-face { 
     font-family: 'icomoon';
@@ -20,19 +19,24 @@ body {
 }	       
 
 h1 {
-  font-size: 24px;
+  font-size: 32px;
+  font-weight: bold;
+  padding-left: 16px;
+  padding-top: 8px;
 }
 
 h2 {
   font-size: 20px;
+  font-weight: bold;
+  padding: 16px;
 }
 div.home-page{
-  max-width: 500px;
+  max-width: 800px;
   margin-left: auto;
   margin-right: auto;
-  border: 2px aliceblue;
+  border: 2px rgb(255, 255, 252);
   padding: 10px;
-  background-color: aliceblue;
+  background-color:rgb(255, 255, 252);
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 
@@ -43,10 +47,12 @@ div.home-page{
 }
 .introduction {
   list-style-type: none;
+  font-size: 16px;
+  margin-left: -16px;
 }
 
 .myphoto {
-  width: 100px;
+  width: 180px;
   border-radius: 5px;
   margin-right: 30px;
 }
@@ -108,6 +114,7 @@ div.home-page h1 {
   padding: 0;
   list-style-position: inside;
   display: flex;
+  justify-content: space-evenly;
 }
 
 #main-menu li {
@@ -119,10 +126,13 @@ div.home-page h1 {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
   font-size: 16px;
   transition: background-color 0.3s ease, transform 0.3s ease;
+  width: 30%;
+  text-align: center;
 }
 
 #main-menu li a {
-
+  color: #222;
+  text-decoration: none;
 }
 
 /* Custom bullets using ::before pseudo-element */
@@ -138,4 +148,17 @@ div.home-page h1 {
 #main-menu li:hover {
   background-color: #ffefd5; /* Light hover effect */
   transform: scale(1.02); /* Slightly increase size on hover */
+}
+
+.cover-letter {
+  padding: 16px;
+}
+
+#courses {
+  margin-top: -24px;
+}
+
+#courses li {
+  position: relative;
+  margin-left: 16px;
 }
