--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ div.home-page{
 }
 
 .myphoto {
-  width: 180px;
+  width: 300px;
   border-radius: 5px;
   margin-right: 30px;
 }
@@ -151,6 +151,10 @@ div.home-page h1 {
 }
 
 .cover-letter {
+  padding: 16px;
+}
+
+.cover-letter-2 {
   padding: 16px;
 }
 
