--- a/styles.css
+++ b/styles.css
@@ -16,26 +16,33 @@ body {
          url('../fonts/icomoon/icomoon.svg#icomoon') format('svg'),
          url('../fonts/icomoon/icomoon.woff') format('woff'),
          url('../fonts/icomoon/icomoon.ttf') format('truetype');
-}	       
+}
+
+p {
+  color: rgb(80, 76, 72);
+}
 
 h1 {
   font-size: 32px;
-  font-weight: bold;
-  padding-left: 16px;
-  padding-top: 8px;
+  font-weight: bolder;
+  padding: 16px;
+  background-color: #ffefd5;
+  color:rgb(80, 76, 72);
+  margin-bottom: 20px;
 }
 
 h2 {
   font-size: 20px;
   font-weight: bold;
   padding: 16px;
+  padding-bottom: 0px;
+  color: rgb(80, 76, 72)
 }
 div.home-page{
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
   border: 2px rgb(255, 255, 252);
-  padding: 10px;
   background-color:rgb(255, 255, 252);
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
@@ -43,25 +50,25 @@ div.home-page{
 .description {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .introduction {
   list-style-type: none;
   font-size: 16px;
-  margin-left: -16px;
+  color: rgb(80, 76, 72);
 }
+
 
 .myphoto {
   width: 300px;
-  border-radius: 5px;
-  margin-right: 30px;
+  border: 2px rgb(80, 76, 72);
 }
 
 div.home-page h1 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
     sans-serif;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
+
 }
 
 .bio {
@@ -86,6 +93,7 @@ div.home-page h1 {
   margin:0;
   padding:0;
   margin-right:2px;
+  margin-top: 8px;
 }
 .socialicons li a  {
   font-family: 'icomoon';
@@ -152,17 +160,28 @@ div.home-page h1 {
 
 .cover-letter {
   padding: 16px;
+  padding-top: 0px;
 }
 
 .cover-letter-2 {
-  padding: 16px;
+  padding-top: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-bottom: 0;
 }
 
 #courses {
   margin-top: -24px;
+  margin-bottom: -10px;
+  color: rgb(80, 76, 72);
 }
 
 #courses li {
   position: relative;
   margin-left: 16px;
+}
+
+.first-word {
+  font-weight: bold;
+  color: rgb(80, 76, 72);
 }
