--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,8 @@ div.home-page{
 .myphoto {
   width: 300px;
   border: 2px rgb(80, 76, 72);
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
 }
 
 div.home-page h1 {
@@ -84,7 +86,6 @@ div.home-page h1 {
 
 .socialicons {
   float: right;
-  margin-right: 4px;
   
 }
 .socialicons li {
@@ -92,7 +93,7 @@ div.home-page h1 {
   display:inline;
   margin:0;
   padding:0;
-  margin-right:2px;
+  margin-left: 2px;
   margin-top: 8px;
 }
 .socialicons li a  {
