--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,10 @@ body {
     font-family: 'icomoon';
     src: url('../fonts/icomoon/icomoon.eot');
     src: url('../fonts/icomoon/icomoon.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/icomoon/icomoon.svg#icomoon') format('svg'),
          url('../fonts/icomoon/icomoon.woff') format('woff'),
+         url('../fonts/icomoon/github.svg') format('svg'),
+         url('../fonts/icomoon/instagram.svg') format('svg'),
+         url('../fonts/icomoon/linkedin.svg') format('svg'),
          url('../fonts/icomoon/icomoon.ttf') format('truetype');
 }
 
@@ -22,14 +24,6 @@ p {
   color: rgb(80, 76, 72);
 }
 
-h1 {
-  font-size: 32px;
-  font-weight: bolder;
-  padding: 16px;
-  background-color: #ffefd5;
-  color:rgb(80, 76, 72);
-  margin-bottom: 20px;
-}
 
 h2 {
   font-size: 20px;
@@ -38,7 +32,34 @@ h2 {
   padding-bottom: 0px;
   color: rgb(80, 76, 72)
 }
-div.home-page{
+
+.header {
+  display: flex;
+  background-color: #ffefd5;
+  justify-content: space-between;
+  height: 60px;
+}
+
+.header h1 {
+  font-size: 32px;
+  font-weight: bolder;
+  padding: 16px;
+  background-color: #ffefd5;
+  color:rgb(80, 76, 72);
+  margin-bottom: 20px;
+}
+
+.header img {
+  width: 32px;
+  height: 32px; 
+  margin: 16px;
+}
+
+.header img:hover{
+  cursor: pointer;
+}
+
+div.home-with-header{
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
@@ -51,6 +72,7 @@ div.home-page{
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  margin-top: 24px;
 }
 .introduction {
   list-style-type: none;
@@ -139,11 +161,6 @@ div.home-page h1 {
   text-align: center;
 }
 
-#main-menu li a {
-  color: #222;
-  text-decoration: none;
-}
-
 /* Custom bullets using ::before pseudo-element */
 #main-menu li::before {
   font-size: 24px;
@@ -157,6 +174,7 @@ div.home-page h1 {
 #main-menu li:hover {
   background-color: #ffefd5; /* Light hover effect */
   transform: scale(1.02); /* Slightly increase size on hover */
+  cursor: pointer;
 }
 
 .cover-letter {
@@ -185,4 +203,8 @@ div.home-page h1 {
 .first-word {
   font-weight: bold;
   color: rgb(80, 76, 72);
+}
+
+.resume-page {
+  content-visibility: hidden;
 }
