--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,8 @@ body {
     font-family: 'icomoon';
     src: url('../fonts/icomoon/icomoon.eot');
     src: url('../fonts/icomoon/icomoon.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/icomoon/icomoon.svg#icomoon') format('svg'),
          url('../fonts/icomoon/icomoon.woff') format('woff'),
-         url('../fonts/icomoon/github.svg') format('svg'),
-         url('../fonts/icomoon/instagram.svg') format('svg'),
-         url('../fonts/icomoon/linkedin.svg') format('svg'),
          url('../fonts/icomoon/icomoon.ttf') format('truetype');
 }
 
@@ -24,6 +22,10 @@ p {
   color: rgb(80, 76, 72);
 }
 
+
+h1 {
+  font-size: 32;
+}
 
 h2 {
   font-size: 20px;
@@ -37,29 +39,35 @@ h2 {
   display: flex;
   background-color: #ffefd5;
   justify-content: space-between;
-  height: 60px;
+  height: 56px;
+  align-items: center;
 }
 
-.header h1 {
+#main-title{
   font-size: 32px;
   font-weight: bolder;
-  padding: 16px;
   background-color: #ffefd5;
-  color:rgb(80, 76, 72);
-  margin-bottom: 20px;
+  color: rgb(54, 52, 50);
+  margin-bottom: 0px;
 }
 
-.header img {
-  width: 32px;
-  height: 32px; 
-  margin: 16px;
+#home-button {
+  font-family: 'icomoon';
+  font-size: 16px;
+  display: block;
+  padding: 6px 8px;
+  background-color:#222;
+  color: #FFF;
+  margin-right: 12px;
+  margin-left: 76px;
+  border-radius: 3px;
 }
 
-.header img:hover{
-  cursor: pointer;
+#home-button:hover {
+  color:/*mainColor*/#fdc750;
 }
 
-div.home-with-header{
+.home-with-header{
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
@@ -107,10 +115,13 @@ div.home-page h1 {
 
 
 .socialicons {
-  float: right;
-  
+  padding-left: 0;
+  margin-left: 12px;
+  margin-top: 8px;
 }
-.socialicons li {
+
+.socialicons li{
+  list-style-type: none;
   float:left;
   display:inline;
   margin:0;
@@ -118,6 +129,7 @@ div.home-page h1 {
   margin-left: 2px;
   margin-top: 8px;
 }
+
 .socialicons li a  {
   font-family: 'icomoon';
   font-size: 16px;
@@ -125,6 +137,7 @@ div.home-page h1 {
   padding: 6px 8px;
   background-color:#222;
   color: #FFF;
+  border-radius: 3px;
 }
 .socialicons li a:hover  {
   color:/*mainColor*/#fdc750;
@@ -159,6 +172,11 @@ div.home-page h1 {
   transition: background-color 0.3s ease, transform 0.3s ease;
   width: 30%;
   text-align: center;
+}
+
+#main-menu li a{
+  color: black;
+  text-decoration: none;
 }
 
 /* Custom bullets using ::before pseudo-element */
@@ -205,6 +223,135 @@ div.home-page h1 {
   color: rgb(80, 76, 72);
 }
 
-.resume-page {
-  content-visibility: hidden;
+/* Resume section */
+
+#resume {
+  display: none;
+  padding: 0px 20px;
+  padding-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+  background-color: rgb(255, 255, 252);
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+}
+.skills-section, .timeline-section {
+  float:left;
+}
+/* Timeline Section */
+.timeline-section {
+  width:490px;
+  padding-right:60px;
+}
+.timeline {
+  margin-bottom: 30px;
+}
+.timeline li {
+  margin-bottom:20px;
+}
+.timeline li .timelineUnit {
+  line-height:17px;
+  margin-left:0px;
+  color: #444;
+  font-size:13px;
+  border-left:1px solid /*mainColor*/#fdc750;
+  padding-left:15px;
+}
+.timeline li .timelineUnit .timelineDate {
+  line-height:17px;
+  color:/*mainColor*/#fdc750;
+  font-size:14px;
+  margin-left:10px;
+  font-weight: normal;
+  padding:2px 6px;
+  float:right;
+}
+.timeline li .timelineUnit h4 {
+  line-height:24px;
+  font-size:15px;
+  color: #444;
+}
+.timeline li .timelineUnit h5 {
+  line-height:18px;
+  font-size:13px;
+  color: #999;
+}
+.timeline li .timelineUnit p {
+  color: #666;
+  font-size:12px;
+  margin-top:5px;
+}
+
+/* Skills Section */
+.skills-section {
+  width:270px;
+}
+.skills {
+  padding-left: 0;
+  list-style-type: none;
+  margin-bottom: 25px;
+  overflow:hidden;
+}
+.skills li {
+  margin-bottom:15px;
+  float:left;
+  padding-left:0px;
+}
+.skills li h4 {
+  width:140px;
+  float:left;
+  font-size:15px;
+  color: #444;
+}
+
+.skills li .rating {
+  width:123px;
+  height:14px;
+  float:left;
+}	
+.skills li .rating > span {
+  opacity: 0.3;
+  height:12px;
+  width:12px;
+  background-color:#757575;
+  display: block;
+  float: left;
+  margin-right: 1px;
+  border: 2px solid #eeeeee;
+    -webkit-border-radius: 20px;
+       -moz-border-radius: 20px;
+            border-radius: 20px;
+}
+
+/* Download Button */
+  #resume .button {
+    width: 250px;
+    padding: 10px;
+    background-color: #8c8c8c;
+    overflow: hidden;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 20px;
+    margin: 0px 0px 0px 0px;
+    color: #f7f7f7;
+    display: block;
+    text-align: center;
+    -webkit-border-radius: 4px 4px 4px 4px;
+       -moz-border-radius: 4px 4px 4px 4px;
+            border-radius: 4px 4px 4px 4px;
+}
+  #resume .button:hover {
+    background-color:/*mainColor*/#fdc750;
+}
+
+/*PROJECTS SECTION */
+
+#projects {
+  display: none;
+}
+
+/* CONTACT SECTION */
+
+#contact {
+  display: none;
 }
