--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ p {
 
 
 h1 {
-  font-size: 32;
+  font-size: 32px;
 }
 
 h2 {
@@ -32,7 +32,13 @@ h2 {
   font-weight: bold;
   padding: 16px;
   padding-bottom: 0px;
-  color: rgb(80, 76, 72)
+  color: rgb(80, 76, 72);
+}
+
+h3 {
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(80, 76, 72);
 }
 
 .header {
@@ -41,6 +47,7 @@ h2 {
   justify-content: space-between;
   height: 56px;
   align-items: center;
+  border-radius: 4px;
 }
 
 #main-title{
@@ -59,7 +66,7 @@ h2 {
   background-color:#222;
   color: #FFF;
   margin-right: 12px;
-  margin-left: 76px;
+  margin-left: 96px;
   border-radius: 3px;
 }
 
@@ -74,6 +81,7 @@ h2 {
   border: 2px rgb(255, 255, 252);
   background-color:rgb(255, 255, 252);
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  margin-top: 64px;
 }
 
 .description {
@@ -100,7 +108,6 @@ div.home-page h1 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
     sans-serif;
   text-align: center;
-
 }
 
 .bio {
@@ -235,6 +242,7 @@ div.home-page h1 {
   background-color: rgb(255, 255, 252);
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
+
 .skills-section, .timeline-section {
   float:left;
 }
@@ -347,7 +355,30 @@ div.home-page h1 {
 /*PROJECTS SECTION */
 
 #projects {
-  display: none;
+    display: none;
+    padding: 0px 20px;
+    padding-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 800px;
+    background-color: rgb(255, 255, 252);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+}
+
+#portfolio-list {
+  list-style-type: none;
+  display: flex;
+  padding-left: 0px;
+  flex-wrap: wrap;
+}
+
+.project {
+  width: 24%;
+  padding: 16px;
+}
+
+.project img {
+  max-width: 100%;
 }
 
 /* CONTACT SECTION */
