--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ h3 {
   background-color:rgb(255, 255, 252);
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
   margin-top: 64px;
+  margin-bottom: 64px;
 }
 
 .description {
