--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
   padding: 0px;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 16px;
+  height: 800px;
 }
   /* Font face */
 @font-face { 
@@ -82,7 +83,6 @@ h3 {
   background-color:rgb(255, 255, 252);
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
   margin-top: 64px;
-  margin-bottom: 64px;
 }
 
 .description {
